add store route and add new code in store controller
